--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ coilVersion = "2.7.0"
 androidx-hilt-version = "1.2.0"
 hilt-version = "2.56.2"
 realm = "10.19.0"
+stripe-version = "21.10.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +37,7 @@ coil-kt-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-version" }
 androidx-hilt = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidx-hilt-version" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt-version" }
+stripe-android = { group = "com.stripe", name = "stripe-android", version.ref = "stripe-version" }
 
 realm-gradle-plugin = { module = "io.realm:realm-gradle-plugin", version.ref = "realm" }
 
